<?xml version="1.0"?>
<package format="2">
  <name>hiwin_robot_client_library</name>
  <version>0.0.0</version>
  <description>The hiwin_robot_client_library package</description>

  <author>HIWIN Technologies Corp</author>
  <maintainer email="hiwin_robot@hiwin.tw">HIWIN Technologies Corp</maintainer>

  <license>Apache-2.0</license>

  <url type="repository">https://github.com/HIWINCorporation/hiwin_ros.git</url>


  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies required to build and run the package -->
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>